<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="viewModel"
            type="andrepereira.com.br.vivychallenge.usecases.doctors.DoctorListFragmentViewModel" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:searchError="@{viewModel.searchStatus}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/doctors_search_ti"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_button"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/doctors_search_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewModel.searchField}"
                android:hint="@string/hint_doctor_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/search_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/doctors_search_ti"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/doctors_search_ti"
            app:doctorListViewModel="@{viewModel}"
            app:onSearchClick="@{viewModel.searchField}"
            app:searchButtonEnabled="@{viewModel.searchStatus}"
            android:background="@drawable/search_icon"
            android:layout_margin="8dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/doctors_list_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:doctorsRecyclerView="@{viewModel.searchStatus}"
            app:doctorListViewModel="@{viewModel}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/doctors_search_ti"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/no_doctors_searched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_doctor_search"
            app:notStartedTextField="@{viewModel.searchStatus}"
            app:layout_constraintTop_toBottomOf="@id/doctors_search_ti"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/no_doctors_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_doctors_found"
            app:notFoundTextField="@{viewModel.searchStatus}"
            app:layout_constraintTop_toBottomOf="@id/doctors_search_ti"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/indeterminateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:progressBar="@{viewModel.searchStatus}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
